Fix error on dynamics ref pages

--- a/dyn/rvv.html
+++ b/dyn/rvv.html
@@ -1208,15 +1208,15 @@
             <div class="envContainer solution">
               <div class="envBody">
                 <p>
-                  (1) The dot product is $\vec{a} \cdot \vec{b} = 8$
+                  (1) The dot product is $\vec{a} \cdot \vec{b} = 7$
                   and the vector lengths are $a = 3.6$ and $b = 3.2$,
-                  so $\cos\theta = 8 / (ab)$ and $\theta \approx
-                  45^\circ$. Now using <a href="#rvv-el">#rvv-el</a>
+                  so $\cos\theta = 7 / (ab)$ and $\theta \approx
+                  53^\circ$. Now using <a href="#rvv-el">#rvv-el</a>
                   gives:
 
                   \[\begin{aligned}
                   \vec{a} \times \vec{b} &amp;= a b \sin\theta ( -\hat{k}) \\
-                  &amp;= -9 \hat{k}.
+                  &amp;\approx -9 \hat{k}.
                   \end{aligned}\]
 
                   (2) Using the component formula <a
@@ -1237,10 +1237,10 @@
                   - (3 \times 2.8) \hat\imath \times \hat{v} \\
                   &amp;\quad + (2 \times 1.4) \hat\jmath \times \hat{u}
                   - (2 \times 2.8) \hat\jmath \times \hat{v} \\
-                  &amp;= 4.2 \sin 45^\circ \, \hat{k}
-                  - 8.5 \sin 135^\circ \, \hat{k} \\
-                  &amp;\quad - 2.8 \sin 45^\circ \, \hat{k}
-                  - 5.7 \sin 45^\circ \, \hat{k} \\
+                  &amp;= 4.2 \sin 53^\circ \, \hat{k}
+                  - 8.5 \sin 143^\circ \, \hat{k} \\
+                  &amp;\quad - 2.8 \sin 53^\circ \, \hat{k}
+                  - 5.7 \sin 53^\circ \, \hat{k} \\
                   &amp;= - 9 \hat{k}.
                   \end{aligned}\]
                 </p>
