--- a/pol/policies.html
+++ b/pol/policies.html
@@ -254,9 +254,7 @@
 						You can use either a physical remote or the iClicker app. An iClicker remote can be purchased 
 						from any of the bookstores. You must sign up for an iClicker.com account, and register for
 						the class you are enrolled in by searching for it once you are logged in.</p>
-					<p>iClicker participation grade is worth 5% of final course grade if it is higher than your combined
-						quiz + final exam grade, replacing the corresponding portion of quiz + final exam grade. 
-						Otherwise, your iClicker grade will not count toward your final course grade.						
+					<p>iClicker participation grade is worth 5% of final course grade.						
 						Your lowest six iClicker scores for the semester will be dropped automatically. These drops 
 						should be reserved for unexpected occurrences such as sickness or a family emergency. 
 						No missed iClicker scores will be excused for the semester regardless of the reasons.</p>
@@ -268,13 +266,12 @@
 						phones. Solutions will not be posted. All quizzes will be held in the Computer-Based Testing
 						Facility (CBTF). Make sure to check the <a href="https://cbtf.engr.illinois.edu/">CBTF</a>
 						website to get information about the facility and what you need to do to sign-up for your quiz.
-						<!-- 
+						 
 						Each quiz grade is determined from the following formula:</p>
-						<p>TAM 210/211/251: <strong>max([First Try, 1/3*(First Try) + 2/3*(Quiz Retry)]).</strong></p>
-						<p>TAM 212: <strong>0.9*max(First Try, Quiz Retry) + 0.1*min(First Try, Quiz Retry).</strong></p>
+						<p><strong>0.9*max(First Try, Quiz Retry) + 0.1*min(First Try, Quiz Retry).</strong></p>
 					<p>If you have an excused absence for the quiz, then you will take the assessment at a later date,
 						or make other arrangements at the discretion of the instructor.</p>
-						-->
+						
 
 					<!-- <p><strong><a id="Quiz review policy" name="Quiz review policy" style="background-size: 16px;">Quiz
 								review policy</a></strong></p>
