Update energy, momentum ref pages

--- a/dyn/ref.html
+++ b/dyn/ref.html
@@ -47,7 +47,7 @@
       <div class="tocContainer">
         <div class="tocColumn">
           <ol>
-            <li>Positions and vectors
+            <li><b>Positions and vectors</b>
               <ol>
                 <li><a href="rvp.html">Positions and coordinates</a></li>
                 <li><a href="rvv.html">Vectors and bases</a></li>
@@ -58,7 +58,7 @@
                 <li><a href="rvn.html">Notation</a></li>
               </ol>
             </li>
-            <li>Kinematics
+            <li><b>Kinematics</b>
               <ol>
                 <li><a href="rkr.html">Rotations and angular velocity</a></li>
                 <li><a href="rkv.html">Position, velocity, and acceleration</a></li>
@@ -75,7 +75,7 @@
         </div>
         <div class="tocColumn">
           <ol>
-            <li>Kinetics
+            <li><b>Kinetics</b>
               <ol>
                 <li><a href="rep.html">Kinetics of point masses</a></li>
                 <li><a href="reg.html">Kinetics of rigid bodies</a></li>
@@ -83,8 +83,7 @@
                 <li>Free body diagrams</li>
                 <li>Accelerating coordinate frames</li>
                 <li><a href="ren.html">Energy and work</a></li>
-                <li>Conservative forces</li>
-                <li>Momentum, impulse, and collisions</li>
+                <li><a href="rec.html">Momentum, impulse, and collisions</a></li>
                 <li><a href="rfr.html">Friction and damping</a></li>
               </ol>
             </li>
@@ -93,7 +92,7 @@
       </div>
     </div>
     <div class="footer">
-      <p class="copyright">Copyright (C) 2012-2015 Matthew West</p>
+      <p class="copyright">Copyright (C) 2012-2015 Matthew West<br>Copyright (C) 2021-2022 Felix Marrar</p>
     </div>
   </div>
 </body>
