--- a/nav.html
+++ b/nav.html
@@ -60,8 +60,7 @@
 								<li><a href="#">Free body diagrams</a></li>
 								<li><a href="#">Accelerating coordinate frames</a></li>
 								<li><a href="/dyn/ren.html">Energy and work</a></li>
-								<li><a href="#">Conservative forces</a></li>
-								<li><a href="#">Momentum, impulse, and collisions</a></li>
+								<li><a href="/dyn/rec.html">Momentum, impulse, and collisions</a></li>
 								<li><a href="/dyn/rfr.html">Friction and damping</a></li>
 							</ul>
 							<span class="arrow">&#8250;</span>
